Further editing P,D,S discussion.

--- a/scripts/Assignment_3-EDA_Report.Rmd
+++ b/scripts/Assignment_3-EDA_Report.Rmd
@@ -2,13 +2,13 @@
 title: "EDA of Spanish electricity generation 2015-2018"
 subtitle: 'Group 17: Time Series - Assignment 3 - EDA Report'
 output:
-  pdf_document:
-    toc: no
-    toc_depth: '2'
   html_document:
     toc: yes
     toc_depth: 2
     fig_caption: yes
+  pdf_document:
+    toc: no
+    toc_depth: '2'
 ---
 
 ```{r setup, include=FALSE}
@@ -141,27 +141,27 @@ Overall, despite linear interpolation not following the trend of the data for so
 
 ## Ethics
 
-While there is no intention to utilize this study for any purpose beyond academic, the ethical concerns relating to this project entirely come from possible uses and interpretations of the outputs of this study in the real world. Primarily, these would relate to political decisions of national energy policy and investment. Spain has an established nuclear sector which has had opposition since the 1950s when the government initially announced its intentions to develop the capability (<https://en.wikipedia.org/wiki/Anti-nuclear_movement_in_Spain> ). The arguments against nuclear largely focus on the hazardous waste, potential consequences of disaster, and association with weapons of mass destruction. If this paper were utilized to argue for further development of Spain's nuclear power industry, these concerns must be considered. Similarly, as mentioned in [Background and Data], there are growing concerns around hydrocarbon-based fuel sources and their impact on climate and air quality. This study specifically makes no recommendations, but if people decide to develop hydrocarbon-based energy sources they should consider the ethics of their impact on the environment. Therefore, global warming is both a political and, in some ways, an ethical issue, and so this would also need to be considered if information from this study were used to support any decisions made about this global challenge.
+While there is no intention to utilise this study for any purpose beyond academic, the ethical concerns relating to this project entirely come from possible uses and interpretations of the outputs of this study in the real world. Primarily, these would relate to political decisions of national energy policy and investment. Spain has an established nuclear sector which has had opposition since the 1950s when the government initially announced its intentions to develop the capability (<https://en.wikipedia.org/wiki/Anti-nuclear_movement_in_Spain> ). The arguments against nuclear largely focus on the hazardous waste, potential consequences of disaster, and association with weapons of mass destruction. If this paper were utilized to argue for further development of Spain's nuclear power industry, these concerns must be considered. Similarly, as mentioned in [Background and Data], there are growing concerns around hydrocarbon-based fuel sources and their impact on climate and air quality. This study specifically makes no recommendations, but if people decide to develop hydrocarbon-based energy sources they should consider the ethics of their impact on the environment. Therefore, global warming is both a political and, in some ways, an ethical issue, and so this would also need to be considered if information from this study were used to support any decisions made about this global challenge.
 
-There are ethical issues to consider beyond technology and climate change as well, in terms of the effect of energy sector policy on people. Any modelling completed from this data is at a national level and so assumes a uniform complete accessibility to energy from all sources, this is inherently not the case. If the government decided to shift to a non-diversified energy model or banned local diesel generators there is the small possibility that areas, most likely rural, would no longer have access to electricity and have an adverse effect on these people lives. More likely is where, due to political pressure, the government chooses to invest in a more expensive source of energy, for example due to a drive to achieve a higher proportion of green energy ( <https://www.theguardian.com/environment/2019/jun/14/power-to-the-people-how-spanish-cities-took-control-of-energy> ). Pushing power prices up would disproportionately affect people from a lower socioeconomic background and fuel a growing divide between the classes and creating a growing poverty in the country. This could be further exacerbated if with the investment in new technology automation is increased, leading to greater efficiency at the cost of lower skilled jobs, again disproportionately affecting the lower socioeconomic class.
+There are ethical issues to consider beyond technology and climate change as well, in terms of the effect of energy sector policy on people. Any modelling completed from this data is at a national level, and one must remember this does not mean there is equal access to energy amongst the population from each source. For example, if the government decided to shift to a non-diversified energy model, or banned local diesel generators, it is possible that certain areas, most likely rural, would have less access to electricity, having an adverse effect on the people who live in these areas. A more likely scenario is one in which, due to political pressure, the government chooses to invest in a more expensive source of energy in order to achieve a higher proportion of green energy (<https://www.theguardian.com/environment/2019/jun/14/power-to-the-people-how-spanish-cities-took-control-of-energy>). Pushing power prices up would disproportionately affect people from a lower socioeconomic background, which could lead to greater poverty and a greater class divide in the country. This problem could be exacerbated if such investment comes with more automation, leading to greater efficiency at the cost of lower skilled jobs and again disproportionately affecting the lower socioeconomic class.
 
-There is a small risk of the creation of feedback cycles relating to the above concerns. This would only occur if decisions made based on the results of this study created a negative affect as discussed above, which was then integrated into another model which the further exacerbated the issue in turn. As this study is a non-reactive one off and there is no intention to base decision making upon the models of this exercise, the concern of feedback loops has been considered outside the remit of the ethical concerns of this study.
+There is a small risk of creating feedback cycles relating to the above concerns. This would only occur if decisions made based on the results of this study created a negative affect as discussed above, which was then integrated into another model which the further exacerbated the issue in turn. As this study is a non-reactive one off and there is no intention to base decision making upon the models of this exercise, the concern of feedback loops has been considered outside the remit of the ethical concerns of this study.
 
-Spain has many formally recognized ethnicities and minorities (<https://minorityrights.org/country/spain/>) however the Spanish Personal Data Protection Act No. 15/1999 does not extend any explicit protection for or guidance on the use and storage of data from these groups. This means that handling approaches and considerations like the protective measures and regulations offered to people such as the Māori in New Zealand are not present or relevant in Spanish law (<https://ec.europa.eu/newsroom/just/redirection/document/45791>). Furthermore, this data is recorded and stored at a national level from generation source rather than a conglomerate of personal data and as such there is little about personal ethics and the use of personal data that is relevant or of concern to this study. There are no religious concerns with energy modelling beyond those discussed to do with the environment and social impacts.
+Spain has many formally recognized ethnicities and minorities (<https://minorityrights.org/country/spain/>) however the Spanish Personal Data Protection Act No. 15/1999 does not extend any explicit protection for or guidance on the use and storage of data from these groups. This means that handling approaches and considerations like the protective measures and regulations offered to people such as the Māori in New Zealand are not present or relevant in Spanish law (<https://ec.europa.eu/newsroom/just/redirection/document/45791>). Furthermore, because this data is recorded and stored at a national level from generation source, there is little about personal ethics and the use of personal data that is relevant or of concern to this study. There are no religious concerns with energy modelling beyond those discussed to do with environmental and social impacts.
 
 ## Privacy
 
-Privacy relates to your right not to be asked invasive questions or to needlessly provide personal information as well as the assurance that any publications made from the data cannot be used to identify you. The data from this study was collected at source of generation and then generalized to a national resolution. This means that there has never been any personal information stored within the data and would only be a concern if the data was comprised of the sum of individuals energy use added up and then anonymised. A larger concern relates to if the data was of finer resolution, such as region or street where theoretically if the sample size is small, even with anonymised data, individuals could be identified with local knowledge, again this is not the case as information is provided at a national level and measures taken at source. This means that data anonymisation techniques such as differential privacy are not only not necessary, but detrimental to the accuracy.
+Privacy relates to your right not to be asked invasive questions or to needlessly provide personal information, as well as the assurance that any publications made from the data cannot be used to identify you. The data from this study was collected at source of generation and then generalized to a national resolution. This means that there has never been any personal information stored within the data and would only be a concern if the data was compiled as the sum of individuals' energy use. A possible concern could arise if the data was collected from relatively small areas, such as suburb- or street-level. In this case it is possible that even with anonymised data, individuals could be identified using local knowledge. Again, this is not the case as information is provided at a national level. This means that data anonymisation techniques such as differential privacy are not only not necessary, but detrimental to the accuracy.
 
-Beyond personal privacy, as this data is available publicly from Spanish TSO Red Electric España there is no concern of corporate property breach. Further to this, the body holding the data is the national government body, they have ensured that it complies with both Spanish and European data privacy regulations.
+Considering now corporate privacy, as this data is available publicly from Spanish TSO Red Electric España, there is no concern of corporate property breach. Further to this, the body holding the data is the national government body, which will have ensured that it complies with both Spanish and European data privacy regulations.
 
 ## Security
 
-Confidentiality, integrity, and availability are the three main factors that should be considered when ensure the security of the project. Confidentiality is ensured through the resolution of the data being at a national scale and being collected at source thus ensuring no identifiable information is available in the first place. This data is publicly available and so there is no need to ensure that this data is kept fully secure while handling it. If there were identifiable aspects to the original data, the responsibility to ensure this information is secure lies with the body holding the information and to ensure they are compliant with any national or European data laws. The analysis, organization and modelling were completed and stored through Microsoft Teams, a git repository and Overleaf which all require a minimum password protection or multifactor authentication. While the information within each storage means does not need to be protected, each company has a responsibility to protect the personal information of our team.
+Confidentiality, integrity, and availability are the three main factors that should be considered when ensuring the security a data project. Confidentiality is ensured through the resolution of the data being at a national scale and being collected at source thus ensuring no identifiable information is available in the first place. This data is publicly available and so there is no need to ensure that this data is kept fully secure while handling it. If there were identifiable aspects to the original data, the responsibility to ensure this information is secure lies with the body holding the information and to ensure they are compliant with any national or European data laws. The analysis, organization and modelling were completed and stored using Microsoft Teams and a Git repository, which all require, at minimum, password protection or multi-factor authentication. While the information within each storage means does not need to be protected, each service has a responsibility to protect the personal information of our team.
 
-Integrity was maintained through the upkeep of a git repository ensuring that we had a complete record of any code and any changes made to the code throughout. This ensured the code present was the most up to date and relevant while also allowing us to keep records of versions throughout the project in case of needing to roll back edits to the code. The data was linked directly to the Kaggle dataset to ensure no local edits would affect it; this does mean that we relied on the integrity of the Kaggle dataset. Access to edit all files was only allowed through team members accounts which were all password protected. Even if someone obtained access to the files and made unregulated changes, these would also be recorded through git and recorded, ensuring that it would be simple to a point we were sure the code was correct and our work.
+Integrity was maintained for this project through the upkeep of a Git repository, ensuring that we had a complete record of changes to the code and report. This way the code was kept up-to-date while allowing us to keep records of previous versions in case we needed to roll back edits to the code. We made sure we keep an unedited version of the original dataset. Access to edit files was only allowed through team members accounts which were all password protected. Even if someone obtained access to the files and made unregulated changes, these would be recorded through git, ensuring it would be simple to stay on top of our work.
 
-Availability of data and files was ensured through utilizing cloud-based platforms for all data, codes, and reports. This ensures that all members of the team could access all files in their most up to date format provided an internet connection was present. Each update to the formats would be associated with the respective team member account and so would be authorized within the platform. All platforms are mainstream and so utilize top level protection however should the servers go down due to something such as a DDOS attack, each git repository is stored locally on devices as well so one of us would have the most up to date file.
+Availability of data and files was ensured through utilizing cloud-based platforms for all data, codes, and reports. This ensures that all members of the team could access all files in their most up to date format provided an internet connection was present. Each update to the formats would be associated with the respective team member account and so would be authorized within the platform. All platforms are mainstream and so utilize top level protection. Should the servers go down due to something like a DDOS attack, each git repository is stored locally on devices as well, so one of us would still have the most up-to-date file.
 
 # Exploratory Data Analysis
 
