fixed reference links

--- a/scripts/references.bib
+++ b/scripts/references.bib
@@ -1,49 +1,49 @@
 
-@misc{entso, 
+@electronic{entso, 
 title={Central collection and publication of electricity generation, transportation and consumption data and information for the pan-European market.}, 
 url={https://transparency.entsoe.eu/dashboard/show}, 
 author={ENTSO.}
 }
 
-@misc{kaggledata,
-title={Electrical demand, generation by type, prices and weather in Spain.},
+@electronic{kaggledata,
+title={Electrical demand, generation by type, prices and weather in {Spain}.},
 url={https://www.kaggle.com/nicholasjhana/energy-consumption-generation-prices-and-weather},
 author={Nicholas Jhana.}
 }
 
-@misc{eudir,
-title={Directive 2009/28/EC of the European Parliament and of the Council of 23 April 2009 on the promotion of the use of energy from renewable sources and amending and subsequently repealing Directives 2001/77/EC and 2003/30/EC.},
+@electronic{eudir,
+title={{Directive 2009/28/EC of the European Parliament and of the Council of 23 April 2009 on the promotion of the use of energy from renewable sources and amending and subsequently repealing Directives 2001/77/EC and 2003/30/EC.}},
 url={https://eur-lex.europa.eu/eli/dir/2009/28/oj},
 author={}
 }
 
-@misc{plandeenergias,
-title={Plan de Energias Renovables 2011-2020.},
+@electronic{plandeenergias,
+title={{Plan de Energias Renovables 2011-2020.}},
 url={https://www.idae.es/sites/default/files/documentos/publicaciones_idae/documentos_11227_per_2011-2020_def_93c624ab.pdf},
 journal={IDAE}
 }
 
-@misc{antinuke,
-title={Anti-nuclear movement in Spain.},
+@electronic{antinuke,
+title={{Anti-nuclear movement in Spain.}},
 url={https://en.wikipedia.org/wiki/Anti-nuclear_movement_in_Spain},
 journal={Wikipedia.}
 }
 
-@misc{powerplay,
-title={Power to the people: how Spanish cities took control of energy.},
+@electronic{powerplay,
+title={{Power to the people: how Spanish cities took control of energy.}},
 url={https://www.theguardian.com/environment/2019/jun/14/power-to-the-people-how-spanish-cities-took-control-of-energy},
 journal={The Guardian.}
 }
 
-@misc{minority,
-title={World Directory of Minorities and Indigenous Peoples: Spain},
+@electronic{minority,
+title={{World Directory of Minorities and Indigenous Peoples: Spain}},
 url={https://minorityrights.org/country/spain/},
 journal={}
 }
 
 
-@misc{datacollection,
-title={Analysis and comparitive review of equality data collection practices in the European Union},
+@electronic{datacollection,
+title={Analysis and comparative review of equality data collection practices in the {European Union}},
 url={https://ec.europa.eu/newsroom/just/redirection/document/45791},
 journal={}
 }
