--- a/scripts/references.bib
+++ b/scripts/references.bib
@@ -61,3 +61,10 @@ author = {Konrad Gürtler and Rafael Postpischil and Rainer Quitzow},
 keywords = {Renewable energy, Solar energy, Feed-in tariffs, Political economy, Policy dismantling, Policy feedbacks},
 abstract = {Despite their increasing cost competitiveness, the continued expansion of renewable energy remains dependent on policy support. Moreover, the dismantling of renewable energy policies in a number of former pioneer countries indicates that continued policy support is not a foregone conclusion. Yet, in light of the accelerating expansion of renewable energy, the dismantling of renewable energy policies has captured comparatively less attention than the rapid spread of support schemes. This article seeks to fill this important knowledge gap by developing and testing a framework for the analysis of policy dismantling processes in the renewable energy sector. It applies the framework to conduct a comparative analysis of policy dismantling in Spain and the Czech Republic. Both countries represent European pioneers of renewable energy support who subsequently dismantled their policies. The paper finds that the inter-relationship between policy design and the broader configuration of the political economy in the energy sector are key for understanding dismantling processes. It offers a number of conclusions for the design of more robust renewable energy support policies.}
 }
+
+@electronic{lng,
+title={{General Overview of Spanish LNG Sector}},
+url={https://ec.europa.eu/energy/sites/ener/files/documents/prieto_-_lng_experience_spain.pdf},
+journal={},
+year={2018}
+}
